[project]
name = "clipscript"
version = "0.1.0"
description = "video-to-blog AI agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "gradio>=5.33.0",
    "gradio-client>=1.10.2",
    "modal>=1.0.2",
    "openai>=1.84.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "yt-dlp>=2025.5.22",
]
